--- a/.github/workflows/Build-OpenWRT.yml
+++ b/.github/workflows/Build-OpenWRT.yml
@@ -44,13 +44,12 @@ jobs:
 
     - name: Check server configuration
       run: |
-        echo "警告⚠"
-        echo "若分配的服务器性能不足, 务必及时取消, 重新运行!"
-        echo "已知编译成功CPU型号: 8370C,8171M"
-        echo "已知性能不足CPU型号: 8272CL"
         echo -e "----------------------------------CPU信息----------------------------------\n"
-        echo "CPU物理数量:$(cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l)"
-        echo -e "CPU核心及版本信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
+        cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c > CPU
+        cat /proc/cpuinfo | grep "cpu cores" | uniq >> CPU
+        sed -i 's|[[:space:]]||g; s|^.||' CPU && sed -i 's|CPU||g; s|pucores:||' CPU
+        CPUNAME="$(awk 'NR==1' CPU)" && CPUCORES="$(awk 'NR==2' CPU)"
+        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=🔔 您正在使用【${CPUNAME} CPU】【${CPUCORES}核心】【${CODE}】源码 编译固件中,请耐心等待...... ⏳" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
     - name: Initialization environment
       env:
@@ -104,7 +103,7 @@ jobs:
 #      env:
 #        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 #        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-
+#
     - name: Download package
       id: package
       run: |
@@ -121,7 +120,7 @@ jobs:
         echo "{status}={success}" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
-        echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "TAG_DATE=$(date +"%m%d-%H%M%S")" >> $GITHUB_ENV
 
@@ -144,13 +143,13 @@ jobs:
     - name: Deliver package
       uses: actions/upload-artifact@v3
       with:
-        name: IPK ${{ env.FILE_DATE }}
+        name: ARMv8_IPK ${{ env.FILE_DATE }}
         path: ./openwrt/bin/package/
 
     - name: Deliver firmware
       uses: actions/upload-artifact@v3
       with:
-        name: firmware ${{ env.FILE_DATE }}
+        name: ARMv8_firmware ${{ env.FILE_DATE }}
         path: ./openwrt/bin/firmware/
 
     - name: Organize files
@@ -201,7 +200,7 @@ jobs:
 #        repository: ${{ github.repository }}
 #        retain_days: 1
 #        keep_minimum_runs: 5
-
+#
 #    - name: Remove old Releases
 #      uses: dev-drprasad/delete-older-releases@v0.2.0
 #      with:
@@ -210,7 +209,7 @@ jobs:
 #        delete_tags: true
 #      env:
 #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+#
     - name: Telegram notification
       run: |
         MSG="
@@ -243,13 +242,12 @@ jobs:
 
     - name: Check server configuration
       run: |
-        echo "警告⚠"
-        echo "若分配的服务器性能不足, 务必及时取消, 重新运行!"
-        echo "已知编译成功CPU型号: 8370C,8171M"
-        echo "已知性能不足CPU型号: 8272CL"
         echo -e "----------------------------------CPU信息----------------------------------\n"
-        echo "CPU物理数量:$(cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l)"
-        echo -e "CPU核心及版本信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
+        cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c > CPU
+        cat /proc/cpuinfo | grep "cpu cores" | uniq >> CPU
+        sed -i 's|[[:space:]]||g; s|^.||' CPU && sed -i 's|CPU||g; s|pucores:||' CPU
+        CPUNAME="$(awk 'NR==1' CPU)" && CPUCORES="$(awk 'NR==2' CPU)"
+        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=🔔 您正在使用【${CPUNAME} CPU】【${CPUCORES}核心】【${CODE}】源码 编译固件中,请耐心等待...... ⏳" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
     - name: Initialization environment
       env:
@@ -303,7 +301,7 @@ jobs:
 #      env:
 #        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 #        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-
+#
     - name: Download package
       id: package
       run: |
@@ -322,7 +320,7 @@ jobs:
         echo "{status}={success}" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
-        echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "TAG_DATE=$(date +"%m%d-%H%M%S")" >> $GITHUB_ENV
 
@@ -345,13 +343,13 @@ jobs:
     - name: Deliver package
       uses: actions/upload-artifact@v3
       with:
-        name: IPK${{ env.FILE_DATE }}
+        name: x86_IPK ${{ env.FILE_DATE }}
         path: ./openwrt/bin/package/
 
     - name: Deliver firmware
       uses: actions/upload-artifact@v3
       with:
-        name: firmware${{ env.FILE_DATE }}
+        name: x86_firmware ${{ env.FILE_DATE }}
         path: ./openwrt/bin/firmware/
 
     - name: Organize files
@@ -383,7 +381,7 @@ jobs:
 #        repository: ${{ github.repository }}
 #        retain_days: 1
 #        keep_minimum_runs: 5
-
+#
 #    - name: Remove old Releases
 #      uses: dev-drprasad/delete-older-releases@v0.2.0
 #      with:
@@ -392,7 +390,7 @@ jobs:
 #        delete_tags: true
 #      env:
 #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+#
     - name: Telegram notification
       run: |
         MSG="
@@ -425,13 +423,12 @@ jobs:
 
     - name: Check server configuration
       run: |
-        echo "警告⚠"
-        echo "若分配的服务器性能不足, 务必及时取消, 重新运行!"
-        echo "已知编译成功CPU型号: 8370C,8171M"
-        echo "已知性能不足CPU型号: 8272CL"
         echo -e "----------------------------------CPU信息----------------------------------\n"
-        echo "CPU物理数量:$(cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l)"
-        echo -e "CPU核心及版本信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
+        cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c > CPU
+        cat /proc/cpuinfo | grep "cpu cores" | uniq >> CPU
+        sed -i 's|[[:space:]]||g; s|^.||' CPU && sed -i 's|CPU||g; s|pucores:||' CPU
+        CPUNAME="$(awk 'NR==1' CPU)" && CPUCORES="$(awk 'NR==2' CPU)"
+        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=🔔 您正在使用【${CPUNAME} CPU】【${CPUCORES}核心】【${CODE}】源码 编译固件中,请耐心等待...... ⏳" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
     - name: Initialization environment
       env:
@@ -485,7 +482,7 @@ jobs:
 #      env:
 #        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 #        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-
+#
     - name: Download package
       id: package
       run: |
@@ -504,7 +501,7 @@ jobs:
         echo "{status}={success}" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
-        echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "TAG_DATE=$(date +"%m%d-%H%M%S")" >> $GITHUB_ENV
 
@@ -527,13 +524,13 @@ jobs:
     - name: Deliver package
       uses: actions/upload-artifact@v3
       with:
-        name: IPK${{ env.FILE_DATE }}
+        name: Docker_IPK ${{ env.FILE_DATE }}
         path: ./openwrt/bin/package/
 
     - name: Deliver firmware
       uses: actions/upload-artifact@v3
       with:
-        name: firmware${{ env.FILE_DATE }}
+        name: Docker_firmware ${{ env.FILE_DATE }}
         path: ./openwrt/bin/firmware/
 
     - name: Organize files
@@ -566,7 +563,7 @@ jobs:
 #        repository: ${{ github.repository }}
 #        retain_days: 1
 #        keep_minimum_runs: 5
-
+#
 #    - name: Remove old Releases
 #      uses: dev-drprasad/delete-older-releases@v0.2.0
 #      with:
@@ -575,7 +572,7 @@ jobs:
 #        delete_tags: true
 #      env:
 #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+#
     - name: Telegram notification
       run: |
         MSG="
@@ -608,13 +605,12 @@ jobs:
 
     - name: Check server configuration
       run: |
-        echo "警告⚠"
-        echo "若分配的服务器性能不足, 务必及时取消, 重新运行!"
-        echo "已知编译成功CPU型号: 8370C,8171M"
-        echo "已知性能不足CPU型号: 8272CL"
         echo -e "----------------------------------CPU信息----------------------------------\n"
-        echo "CPU物理数量:$(cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l)"
-        echo -e "CPU核心及版本信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
+        cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c > CPU
+        cat /proc/cpuinfo | grep "cpu cores" | uniq >> CPU
+        sed -i 's|[[:space:]]||g; s|^.||' CPU && sed -i 's|CPU||g; s|pucores:||' CPU
+        CPUNAME="$(awk 'NR==1' CPU)" && CPUCORES="$(awk 'NR==2' CPU)"
+        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=🔔 您正在使用【${CPUNAME} CPU】【${CPUCORES}核心】【${CODE}】源码 编译固件中,请耐心等待...... ⏳" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
     - name: Initialization environment
       env:
@@ -680,7 +676,7 @@ jobs:
         echo "{status}={success}" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
-        echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "TAG_DATE=$(date +"%m%d-%H%M%S")" >> $GITHUB_ENV
 
@@ -703,13 +699,13 @@ jobs:
     - name: Deliver package
       uses: actions/upload-artifact@v3
       with:
-        name: IPK${{ env.FILE_DATE }}
+        name: Original_IPK ${{ env.FILE_DATE }}
         path: ./openwrt/bin/package/
 
     - name: Deliver firmware
       uses: actions/upload-artifact@v3
       with:
-        name: firmware${{ env.FILE_DATE }}
+        name: Original_firmware ${{ env.FILE_DATE }}
         path: ./openwrt/bin/firmware/
 
     - name: Organize files
@@ -741,7 +737,7 @@ jobs:
 #        repository: ${{ github.repository }}
 #        retain_days: 1
 #        keep_minimum_runs: 5
-
+#
 #    - name: Remove old Releases
 #      uses: dev-drprasad/delete-older-releases@v0.2.0
 #      with:
@@ -750,7 +746,7 @@ jobs:
 #        delete_tags: true
 #      env:
 #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+#
     - name: Telegram notification
       run: |
         MSG="
