--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -39,17 +39,16 @@ jobs:
 #        path: .commitHash
 #        key: HEAD-${{ steps.getHash.outputs.commitHash }}
 #
-    - name: Check build status
-      id: Build-OpenWRT
-      uses: ./.github/workflows/Build-OpenWRT.yml
-      if: steps.cacheHash.outputs.cache-hit != 'true' && !contains(jobs.Build-OpenWRT.outputs.job-status, 'in_progress')
-
-    - name: Trigger build
-      if: steps.cacheHash.outputs.cache-hit != 'true' && github.event.repository.name == 'Build-OpenWRT' && github.event_name == 'repository_dispatch' && !contains(jobs.Build-OpenWRT.outputs.job-status, 'in_progress')
+    - name: Trigger Build-OpenWRT workflow
+      if: steps.cacheHash.outputs.cache-hit != 'true' && github.event.repository.name == 'build-openwrt'
       uses: peter-evans/repository-dispatch@v2
       with:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         event-type: lede Source Code Update
+
+    - name: Run Build-OpenWRT workflow
+      if: github.event.repository.name == 'build-openwrt' && github.event_name == 'repository_dispatch' && !contains(steps.build-openwrt.outputs.job-status, 'in_progress')
+      uses: ./.github/workflows/Build-OpenWRT.yml
 
 #    - name: Save New Commit Hash
 #      if: steps.cacheHash.outputs.cache-hit != 'true'
