--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -40,15 +40,15 @@ jobs:
 #        key: HEAD-${{ steps.getHash.outputs.commitHash }}
 #
     - name: Trigger build
-      if: steps.cacheHash.outputs.cache-hit != 'true' && github.event.repository.name == 'Build-OpenWRT'
+      if: steps.cacheHash.outputs.cache-hit != 'true'
       uses: peter-evans/repository-dispatch@v2
       with:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         event-type: lede Source Code Update
 
     - name: Run Build-x86.yml
-      if: github.event.repository.name == 'Build-OpenWRT' && github.event_name == 'repository_dispatch'
-      uses: ./.github/workflows/Build-x86.yml
+      if: github.event.repository.name == 'Build-OpenWRT'
+      uses: ./.github/workflows/Build-xOpenWRT.yml
 
 #    - name: Save New Commit Hash
 #      if: steps.cacheHash.outputs.cache-hit != 'true'
