--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -49,6 +49,8 @@ jobs:
     - name: Designated workflow
       if: github.event.repository.name == 'Build-OpenWRT'
       uses: ./.github/workflows/Build-OpenWRT.yml
+      with: 
+        path: ./.github/workflows/Build-OpenWRT.yml
 
 #    - name: Save New Commit Hash
 #      if: steps.cacheHash.outputs.cache-hit != 'true'
