--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -38,34 +38,23 @@ jobs:
 #      with:
 #        path: .commitHash
 #        key: HEAD-${{ steps.getHash.outputs.commitHash }}
-
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Trigger build
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      uses: peter-evans/repository-dispatch@v2
-      with:
-        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
-        event-type: lede Source Code Update
-
-    - name: Designated workflow
-      run: |
-        cd ./.github/workflows
-        chmod +x ./Build-OpenWRT.yml
-        ./Build-OpenWRT.yml
 #
 #    - name: Save New Commit Hash
 #      if: steps.cacheHash.outputs.cache-hit != 'true'
 #      run: |
 #        echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
 #
-#    - name: Trigger build
-#      if: steps.cacheHash.outputs.cache-hit != 'true'
-#      uses: peter-evans/repository-dispatch@v2
-#      with:
-#        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
-#        event-type: lede Source Code Update
+    - name: Trigger build
+      if: steps.cacheHash.outputs.cache-hit != 'true'
+      uses: peter-evans/repository-dispatch@v2
+      with:
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
+        event-type: lede Source Code Update
+        client-payload: '{"workflow_file": "Build-OpenWRT.yml"}'
+
+    - name: Run designated workflow
+      if: github.event.client_payload.workflow_file == 'Build-OpenWRT.yml'
+      uses: ./.github/workflows/Build-OpenWRT.yml
 
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
