--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -55,6 +55,9 @@ jobs:
 #        event-type: lede Source Code Update
 #        client-payload: '{"workflow_file": "Build-OpenWRT.yml"}'
 
+    - name: Checkout
+      uses: actions/checkout@v3
+      
     - name: Run designated workflow
       uses: ./.github/workflows/Build-OpenWRT.yml
 
