--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -20,9 +20,6 @@ on:
   schedule:
     - cron: 0 22 * * *
 
-  repository_dispatch:
-    types: [lede Source Code Update]
-    
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -47,19 +44,13 @@ jobs:
 #      run: |
 #        echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
 #
-#    - name: Trigger build
-#      if: steps.cacheHash.outputs.cache-hit != 'true'
-#      uses: peter-evans/repository-dispatch@v2
-#      with:
-#        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
-#        event-type: lede Source Code Update
-#        client-payload: '{"workflow_file": "Build-OpenWRT.yml"}'
-
-    - name: Checkout
-      uses: actions/checkout@v3
-      
-    - name: Run designated workflow
-      uses: ./.github/workflows/Build-OpenWRT.yml
+    - name: Trigger build
+      if: steps.cacheHash.outputs.cache-hit != 'true'
+      uses: peter-evans/repository-dispatch@v2
+      with:
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
+        event-type: lede Source Code Update
+        client-payload: '{"workflow_file": "Build-OpenWRT.yml"}'
 
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
