--- a/.github/workflows/Build-OpenWRT.yml
+++ b/.github/workflows/Build-OpenWRT.yml
@@ -12,6 +12,9 @@ name: Build-OpenWRT
 
 on:
   repository_dispatch:
+    types: [Build-OpenWRT]
+    paths:
+      - $.client_payload.workflow_file
   workflow_dispatch:
     inputs:
       ssh:
