--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -49,8 +49,8 @@ jobs:
       uses: peter-evans/repository-dispatch@v2
       with:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
-        event-type: lede Source Code Update
-        client-payload: '{"workflow_file": "Build-OpenWRT.yml"}'
+        event-type: Build-OpenWRT
+        client-payload: '{"param": "value"}'
 
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
