--- a/.github/workflows/Build-ARMv8.yml
+++ b/.github/workflows/Build-ARMv8.yml
@@ -41,16 +41,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Check server configuration
-      run: |
-        echo "警告⚠"
-        echo "若分配的服务器性能不足, 务必及时取消, 重新运行!"
-        echo "已知编译成功CPU型号: 8370C,8171M"
-        echo "已知性能不足CPU型号: 8272CL"
-        echo -e "----------------------------------CPU信息----------------------------------\n"
-        echo "CPU物理数量:$(cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l)"
-        echo -e "CPU核心及版本信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
-
     - name: Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
@@ -58,13 +48,13 @@ jobs:
         docker rmi `docker images -q`
         sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
         sudo -E apt-mark hold grub-efi-amd64-signed
-        sudo -E apt update
+        sudo -E apt -qq update
         sudo -E apt -y purge azure-cli* docker* ghc* zulu* llvm* firefox google* dotnet* powershell* openjdk* mysql* php* mongodb* dotnet* moby* snap*
         sudo -E apt -y full-upgrade
-        sudo -E apt -y install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
+        sudo -E apt -y -qq install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
         sudo -E systemctl daemon-reload
-        sudo -E apt -y autoremove --purge
-        sudo -E apt clean
+        sudo -E apt -y -qq autoremove --purge
+        sudo -E apt -qq clean
         sudo -E timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
