--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -43,14 +43,13 @@ jobs:
 #      if: steps.cacheHash.outputs.cache-hit != 'true'
 #      run: |
 #        echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
-#
+
     - name: Trigger build
       if: steps.cacheHash.outputs.cache-hit != 'true'
       uses: peter-evans/repository-dispatch@v2
       with:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
-        event-type: Build-OpenWRT
-        client-payload: '{"param": "value"}'
+        event-type: lede Source Code Update
 
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
