--- a/.github/workflows/Build-OpenWRT.yml
+++ b/.github/workflows/Build-OpenWRT.yml
@@ -162,7 +162,7 @@ jobs:
       uses: ophub/flippy-openwrt-actions@main
       env:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
-        KERNEL_REPO_URL: ${{ github.repository }}
+        KERNEL_REPO_URL: https://github.com/yunxi993/OpenWrt-ARMv8/releases/tag/untagged-b54ac4130c57951f8f0a
         PACKAGE_SOC: vplus_beikeyun_l1pro_r66s_r68s_s905_s905d_s905x2_s905x3_s912_s922x_s922x-n2
         KERNEL_AUTO_LATEST:  true
         KERNEL_VERSION_NAME: 5.15.85_6.1.1
