--- a/.github/workflows/Build-OpenWRT.yml
+++ b/.github/workflows/Build-OpenWRT.yml
@@ -34,7 +34,7 @@ env:
   TZ: Asia/Shanghai
 
 jobs:
-  build:
+  ARMv8:
     name: ARMv8
     runs-on: ubuntu-22.04
 
@@ -109,6 +109,8 @@ jobs:
         cd openwrt
         make defconfig
         make download -j16
+        find dl -size "-1024c" -exec ls -l {} \;
+        find dl -size "-1024c" -exec rm -f {} \;
 
     - name: Compile the firmware
       id: compile
@@ -217,7 +219,7 @@ jobs:
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
 
-  build-x86:
+  x86:
     name: x86
     runs-on: ubuntu-22.04
     env:
@@ -397,7 +399,7 @@ jobs:
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
 
-  build-x86-docker:
+  x86-docker:
     name: x86-docker
     runs-on: ubuntu-22.04
     env:
@@ -578,7 +580,7 @@ jobs:
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
 
-  build-x86-original:
+  x86-original:
     name: x86-original
     runs-on: ubuntu-22.04
     env:
@@ -725,23 +727,6 @@ jobs:
           * Default username: root
           * Default password: password
 
-#    - name: Delete workflow runs
-#      uses: GitRML/delete-workflow-runs@main
-#      with:
-#        token: ${{ secrets.GITHUB_TOKEN }}
-#        repository: ${{ github.repository }}
-#        retain_days: 1
-#        keep_minimum_runs: 5
-#
-#    - name: Remove old Releases
-#      uses: dev-drprasad/delete-older-releases@v0.2.0
-#      with:
-#        repo: ${{ github.repository }}
-#        keep_latest: 8
-#        delete_tags: true
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#
     - name: Telegram notification
       run: |
         MSG="
@@ -749,3 +734,23 @@ jobs:
         x86 original编译完成
         "
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
+
+  delete:
+    runs-on: ubuntu-latest
+    needs: [ARMv8, x86, x86-docker, x86-original]
+    
+    - name: Delete workflow runs
+      uses: GitRML/delete-workflow-runs@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        repository: ${{ github.repository }}
+        retain_days: 1
+
+    - name: Remove old Releases
+      uses: dev-drprasad/delete-older-releases@v0.2.1
+      with:
+        repo: ${{ github.repository }}
+        keep_latest: 4
+        delete_tags: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
