checker.yml: disables two workflow.

--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -25,15 +25,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-    - name: Delete workflow runs
-      uses: Mattraks/delete-workflow-runs@v2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        repository: ${{ github.repository }}
-        retain_days: 3
-        keep_minimum_runs: 1
-
+    
     - name: Get Commit Hash
       id: getHash
       run: |
@@ -64,11 +56,19 @@ jobs:
       run: |
         curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}lede源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
 
-    - name: Remove old Releases
-      uses: dev-drprasad/delete-older-releases@v0.2.1
-      with:
-        repo: ${{ github.repository }}
-        keep_latest: 4
-        delete_tags: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#    - name: Delete workflow runs
+#      uses: Mattraks/delete-workflow-runs@v2
+#      with:
+#        token: ${{ secrets.GITHUB_TOKEN }}
+#        repository: ${{ github.repository }}
+#        retain_days: 3
+#        keep_minimum_runs: 1
+#
+#    - name: Remove old Releases
+#      uses: dev-drprasad/delete-older-releases@v0.2.1
+#      with:
+#        repo: ${{ github.repository }}
+#        keep_latest: 4
+#        delete_tags: true
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
