--- a/.github/workflows/Build-OpenWRT.yml
+++ b/.github/workflows/Build-OpenWRT.yml
@@ -740,15 +740,15 @@ jobs:
     needs: [ARMv8, x86, x86-docker, x86-original]
     
     steps:
-      - uses: actions/checkout@v3
-      
+
       - name: Delete workflow runs
         uses: Mattraks/delete-workflow-runs@main
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
           retain_days: 1
-
+          keep_minimum_runs: 1
+          
       - name: Remove old Releases
         uses: dev-drprasad/delete-older-releases@master
         with:
