--- a/lede/Build-x86-Docker.config
+++ b/lede/Build-x86-Docker.config
@@ -217,13 +217,7 @@ CONFIG_EXTERNAL_CPIO=""
 #
 # Root filesystem images
 #
-CONFIG_TARGET_ROOTFS_EXT4FS=y
-CONFIG_TARGET_EXT4_RESERVED_PCT=0
-CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
-# CONFIG_TARGET_EXT4_BLOCKSIZE_2K is not set
-# CONFIG_TARGET_EXT4_BLOCKSIZE_1K is not set
-CONFIG_TARGET_EXT4_BLOCKSIZE=4096
-# CONFIG_TARGET_EXT4_JOURNAL is not set
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=1024
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
@@ -239,10 +233,10 @@ CONFIG_GRUB_TIMEOUT="0"
 CONFIG_GRUB_TITLE="OpenWrt"
 # CONFIG_ISO_IMAGES is not set
 CONFIG_QCOW2_IMAGES=y
-# CONFIG_VDI_IMAGES is not set
+CONFIG_VDI_IMAGES=y
 CONFIG_VMDK_IMAGES=y
-# CONFIG_VHDX_IMAGES is not set
-CONFIG_TARGET_IMAGES_GZIP=y
+CONFIG_VHDX_IMAGES=y
+# CONFIG_TARGET_IMAGES_GZIP is not set
 
 #
 # Image Options
