--- a/original/Build-x86.config
+++ b/original/Build-x86.config
@@ -156,7 +156,7 @@ CONFIG_GRUB_TITLE="OpenWrt"
 CONFIG_VDI_IMAGES=y
 CONFIG_VMDK_IMAGES=y
 CONFIG_VHDX_IMAGES=y
-CONFIG_TARGET_IMAGES_GZIP=y
+# CONFIG_TARGET_IMAGES_GZIP is not set
 
 #
 # Image Options
